tests/invalid_typecheck/test_tc_and_left_int.aphi
/*
Type-check error: Invalid operand for '&&' (expected bool, got int).
Left operand of '&&' is int.
*/

int x;
bool b;
bool r;

procedure main {
    x = 1;
    b = true;
    r = x && b;
}
